Doc: testcase > menu.phtml, request.inc.php | module-testcase --> op-unit-app

--- a/testcase/menu.phtml
+++ b/testcase/menu.phtml
@@ -1,10 +1,10 @@
 <?php
 /**
- * module-testcase:/unit/app/menu.phtml
+ * op-unit-app:/unit/app/menu.phtml
  *
  * @creation  2019-09-17
  * @version   1.0
- * @package   module-testcase
+ * @package   op-unit-app
  * @author    Tomoaki Nagahara <tomoaki.nagahara@gmail.com>
  * @copyright Tomoaki Nagahara All right reserved.
  */
